Beautify and color fixes

--- a/about.html
+++ b/about.html
@@ -5,20 +5,26 @@ title: About
 
 <!-- Top Header Section -->
 <div class="container-fluid background">
-    <div class="container py-3">
-      <h1 class="text-main">About</h1>
-    </div>
+  <div class="container py-3">
+    <h1 class="text-main">About</h1>
+  </div>
 </div>
 
 <!-- Description Section -->
 <div class="container-fluid">
-    <div class="container py-4">
-      <h2 class="text-main">History</h2>
-      <p class="text-main">K-9 Mail is an open source email client for Android with many advanced features.</p>
-      <p class="text-main">K-9 Mail was born when Jesse Vincent created a simple patch to the Email app included in Android 1.0. Back then the creators of the Android OS hadn’t yet figured out how to handle community contributions. So he built his own version of the Email app and shared it with the world.</p>
-      <p class="text-main">In some incarnations, Doctor Who had a robotic dog named “K-9”. The dog was, in effect, an android mutt. When Jesse first created K-9, his goal was to create an Android mail client as good as the UNIX mail client mutt. The name was a natural fit.</p>
-      <h2 class="text-main pt-3">License</h2>
-      <p class="text-main">K-9 Mail is licensed under the <a class="underline" href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank" rel="noopener">Apache License, Version 2.0</a>. The source code is available on <a class="underline" href="https://github.com/k9mail/k-9/" target="_blank" rel="noopener">GitHub</a>.</p>
-    </div>
+  <div class="container py-4">
+    <h2 class="text-main">History</h2>
+    <p class="text-main">K-9 Mail is an open source email client for Android with many advanced features.</p>
+    <p class="text-main">K-9 Mail was born when Jesse Vincent created a simple patch to the Email app included in
+      Android 1.0. Back then the creators of the Android OS hadn’t yet figured out how to handle community
+      contributions. So he built his own version of the Email app and shared it with the world.</p>
+    <p class="text-main">In some incarnations, Doctor Who had a robotic dog named “K-9”. The dog was, in effect, an
+      android mutt. When Jesse first created K-9, his goal was to create an Android mail client as good as the UNIX mail
+      client mutt. The name was a natural fit.</p>
+    <h2 class="text-main pt-3">License</h2>
+    <p class="text-main">K-9 Mail is licensed under the <a class="underline"
+        href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank" rel="noopener">Apache License, Version
+        2.0</a>. The source code is available on <a class="underline" href="https://github.com/k9mail/k-9/"
+        target="_blank" rel="noopener">GitHub</a>.</p>
+  </div>
 </div>
-
