--- a/team.html
+++ b/team.html
@@ -5,136 +5,137 @@ title: Team
 
 <!-- Top Header Section -->
 <div class="container-fluid background">
-    <div class="container py-3">
-      <h1 class="text-main">Team</h1>
-    </div>
+  <div class="container py-3">
+    <h1 class="text-main">Team</h1>
+  </div>
 </div>
 
 <!-- Description Section -->
 <div class="container-fluid">
-    <div class="container pt-4 pb-2">
-      <p class="size-18 text-main">K-9 Mail wouldn’t be where it is today without the team behind it who have contributed design, code and ideas.</p>
-    </div>
+  <div class="container pt-4 pb-2">
+    <p class="size-18 text-main">K-9 Mail wouldn’t be where it is today without the team behind it who have contributed
+      design, code and ideas.</p>
+  </div>
 </div>
 
 <div class="container-fluid">
-    <div class="container pt-2 pb-5">
-      <h2 class="text-main">Active Team Members</h2>
-      <ul class="text-main">
-          <li>cketti - Project lead</li>
-          <li>ByteHamster</li>
-          <li>Valodim</li>
-          <li>dschuermann</li>
-      </ul>
-      <h2 class="text-main pt-2">Project Members</h2>
-      <ul class="text-main">
-          <li>obra - Founder and former project lead</li>
-          <li>danapple</li>
-          <li>zjw</li>
-          <li>andrewchen</li>
-          <li>artbristol</li>
-          <li>baolongnt</li>
-          <li>blanksoul</li>
-          <li>dzan</li>
-          <li>Fiouz</li>
-          <li>Hiranotaka</li>
-          <li>jcborchardt</li>
-          <li>jberkel</li>
-          <li>jca02266</li>
-          <li>ligi</li>
-          <li>m0vie</li>
-          <li>maniac103</li>
-          <li>MarcusWolschon</li>
-          <li>philipwhiuk</li>
-          <li>rabcyr</li>
-          <li>rafl</li>
-          <li>swapsmagic</li>
-          <li>thialfihar</li>
-          <li>wongk</li>
-          <li>xperimental</li>
-          <li>zjw</li>
-      </ul>
-      <h2 class="text-main pt-2">Other Contributors</h2>
-      <ul class="text-main">
-        <li>dnet</li>
-        <li>ismarc</li>
-        <li>andrewgaul</li>
-        <li>bradleyy</li>
-        <li>janekx</li>
-        <li>rk4an</li>
-        <li>ApoorvKhatreja</li>
-        <li>Uni-</li>
-        <li>pylerSM</li>
-        <li>jkinnunen</li>
-        <li>bitblaster</li>
-        <li>tobiasbaum</li>
-        <li>igavio</li>
-        <li>marciozomb13</li>
-        <li>bboa</li>
-        <li>sunglim</li>
-        <li>kiike</li>
-        <li>frommeyerc</li>
-        <li>xperimental</li>
-        <li>mnb20</li>
-        <li>wilian-cb</li>
-        <li>roee88</li>
-        <li>mallamanis</li>
-        <li>Mama59</li>
-        <li>vcaulier</li>
-        <li>jonas-lundqvist</li>
-        <li>sq5gvm</li>
-        <li>tibbetts</li>
-        <li>0x2102</li>
-        <li>dotnick</li>
-        <li>srinathwarrier</li>
-        <li>raboof</li>
-        <li>miguelpinheiro</li>
-        <li>alexandre75</li>
-        <li>mawiegand</li>
-        <li>joaopedrotaveira</li>
-        <li>mkj</li>
-        <li>leonhandreke</li>
-        <li>diegomaninetti</li>
-        <li>eagan</li>
-        <li>justdave</li>
-        <li>foxban</li>
-        <li>morckx</li>
-        <li>RootRulez</li>
-        <li>Mittaa</li>
-        <li>nysatrok</li>
-        <li>frankdu</li>
-        <li>qvandekadsye</li>
-        <li>bk2204</li>
-        <li>vtor</li>
-        <li>dalevizo</li>
-        <li>s3b</li>
-        <li>TETRA2000</li>
-        <li>chrisbanes</li>
-        <li>sedrubal</li>
-        <li>frankoid</li>
-        <li>archie-sh</li>
-        <li>jott</li>
-        <li>mvitaly</li>
-        <li>Frank071</li>
-        <li>Jan-Bart</li>
-        <li>emanov</li>
-        <li>rpimonitrbtch</li>
-        <li>christianknecht</li>
-        <li>svenstaro</li>
-        <li>eperez</li>
-        <li>levysiqueira</li>
-        <li>ciskeboekelo</li>
-        <li>dmitryash</li>
-        <li>yarikoptic</li>
-        <li>andriykopanytsia</li>
-        <li>rom1v</li>
-        <li>monopatis</li>
-        <li>vgezer</li>
-        <li>Votyer</li>
-        <li>rbayer</li>
-        <li>chamonkey</li>
-        <li>voda</li>
-        <li>vuntz</li>
-      </ul>
-    </div>
+  <div class="container pt-2 pb-5">
+    <h2 class="text-main">Active Team Members</h2>
+    <ul class="text-main">
+      <li>cketti - Project lead</li>
+      <li>ByteHamster</li>
+      <li>Valodim</li>
+      <li>dschuermann</li>
+    </ul>
+    <h2 class="text-main pt-2">Project Members</h2>
+    <ul class="text-main">
+      <li>obra - Founder and former project lead</li>
+      <li>danapple</li>
+      <li>zjw</li>
+      <li>andrewchen</li>
+      <li>artbristol</li>
+      <li>baolongnt</li>
+      <li>blanksoul</li>
+      <li>dzan</li>
+      <li>Fiouz</li>
+      <li>Hiranotaka</li>
+      <li>jcborchardt</li>
+      <li>jberkel</li>
+      <li>jca02266</li>
+      <li>ligi</li>
+      <li>m0vie</li>
+      <li>maniac103</li>
+      <li>MarcusWolschon</li>
+      <li>philipwhiuk</li>
+      <li>rabcyr</li>
+      <li>rafl</li>
+      <li>swapsmagic</li>
+      <li>thialfihar</li>
+      <li>wongk</li>
+      <li>xperimental</li>
+      <li>zjw</li>
+    </ul>
+    <h2 class="text-main pt-2">Other Contributors</h2>
+    <ul class="text-main">
+      <li>dnet</li>
+      <li>ismarc</li>
+      <li>andrewgaul</li>
+      <li>bradleyy</li>
+      <li>janekx</li>
+      <li>rk4an</li>
+      <li>ApoorvKhatreja</li>
+      <li>Uni-</li>
+      <li>pylerSM</li>
+      <li>jkinnunen</li>
+      <li>bitblaster</li>
+      <li>tobiasbaum</li>
+      <li>igavio</li>
+      <li>marciozomb13</li>
+      <li>bboa</li>
+      <li>sunglim</li>
+      <li>kiike</li>
+      <li>frommeyerc</li>
+      <li>xperimental</li>
+      <li>mnb20</li>
+      <li>wilian-cb</li>
+      <li>roee88</li>
+      <li>mallamanis</li>
+      <li>Mama59</li>
+      <li>vcaulier</li>
+      <li>jonas-lundqvist</li>
+      <li>sq5gvm</li>
+      <li>tibbetts</li>
+      <li>0x2102</li>
+      <li>dotnick</li>
+      <li>srinathwarrier</li>
+      <li>raboof</li>
+      <li>miguelpinheiro</li>
+      <li>alexandre75</li>
+      <li>mawiegand</li>
+      <li>joaopedrotaveira</li>
+      <li>mkj</li>
+      <li>leonhandreke</li>
+      <li>diegomaninetti</li>
+      <li>eagan</li>
+      <li>justdave</li>
+      <li>foxban</li>
+      <li>morckx</li>
+      <li>RootRulez</li>
+      <li>Mittaa</li>
+      <li>nysatrok</li>
+      <li>frankdu</li>
+      <li>qvandekadsye</li>
+      <li>bk2204</li>
+      <li>vtor</li>
+      <li>dalevizo</li>
+      <li>s3b</li>
+      <li>TETRA2000</li>
+      <li>chrisbanes</li>
+      <li>sedrubal</li>
+      <li>frankoid</li>
+      <li>archie-sh</li>
+      <li>jott</li>
+      <li>mvitaly</li>
+      <li>Frank071</li>
+      <li>Jan-Bart</li>
+      <li>emanov</li>
+      <li>rpimonitrbtch</li>
+      <li>christianknecht</li>
+      <li>svenstaro</li>
+      <li>eperez</li>
+      <li>levysiqueira</li>
+      <li>ciskeboekelo</li>
+      <li>dmitryash</li>
+      <li>yarikoptic</li>
+      <li>andriykopanytsia</li>
+      <li>rom1v</li>
+      <li>monopatis</li>
+      <li>vgezer</li>
+      <li>Votyer</li>
+      <li>rbayer</li>
+      <li>chamonkey</li>
+      <li>voda</li>
+      <li>vuntz</li>
+    </ul>
+  </div>
 </div>
