--- a/contribute.html
+++ b/contribute.html
@@ -6,106 +6,138 @@ title: Contribute
 <!-- Top Header Section -->
 
 <div class="container-fluid background">
-    <div class="container py-3">
-      <h1 class="text-main">Contribute</h1>
-    </div>
+  <div class="container py-3">
+    <h1 class="text-main">Contribute</h1>
   </div>
+</div>
 
-  <!-- Description Section -->
-  <div class="container-fluid">
-    <div class="container pt-4 pb-2">
-      <p class="size-18 text-main">Help us make K-9 Mail even better! Below you'll find several ways to contribute to the project, if you're a user, a developer, a translator, designer etc. or even if you just want to help financially by donating.</p>
-    </div>
+<!-- Description Section -->
+<div class="container-fluid">
+  <div class="container pt-4 pb-2">
+    <p class="size-18 text-main">Help us make K-9 Mail even better! Below you'll find several ways to contribute to the
+      project, if you're a user, a developer, a translator, designer etc. or even if you just want to help financially
+      by donating.</p>
   </div>
+</div>
 
-  <!-- Tabs Section -->
-  <div class="container-fluid pt-3 pb-5">
-    <div id="contributions" class="container px-0 card-border">
-      <div class="row no-gutters justify-content-start align-items-top">
-        <div class="col-lg-4 pt-4 background col-sm-12">
-          <div class="tab pt-2 pb-5 pl-4">
-            <button id="button-users" class="tablinkservice w-100" onclick="service(event, 'users')"><i class="fas fa-user mr-1"></i> Users</button>
-            <button id="button-developers" class="tablinkservice w-100" onclick="service(event, 'developers')"><i class="fas fa-user-ninja mr-1"></i> Developers</button>
-            <button id="button-documentation" class="tablinkservice w-100" onclick="service(event, 'documentation')"><i class="fas fa-book mr-1"></i> Documentation</button>
-            <button id="button-donation" class="tablinkservice w-100" onclick="service(event, 'donation')"><i class="fas fa-donate mr-1"></i> Donation</button>
-          </div>
+<!-- Tabs Section -->
+<div class="container-fluid pt-3 pb-5">
+  <div id="contributions" class="container px-0 card-border">
+    <div class="row no-gutters justify-content-start align-items-top">
+      <div class="col-lg-4 pt-4 background col-sm-12">
+        <div class="tab pt-2 pb-5 pl-4">
+          <button id="button-users" class="tablinkservice w-100" onclick="service(event, 'users')"><i
+              class="fas fa-user mr-1"></i> Users</button>
+          <button id="button-developers" class="tablinkservice w-100" onclick="service(event, 'developers')"><i
+              class="fas fa-user-ninja mr-1"></i> Developers</button>
+          <button id="button-documentation" class="tablinkservice w-100" onclick="service(event, 'documentation')"><i
+              class="fas fa-book mr-1"></i> Documentation</button>
+          <button id="button-donation" class="tablinkservice w-100" onclick="service(event, 'donation')"><i
+              class="fas fa-donate mr-1"></i> Donation</button>
         </div>
-        <div class="col-lg-8 px-4 pt-3 col-sm-12">
+      </div>
+      <div class="col-lg-8 px-4 pt-3 col-sm-12">
 
-          <div id="users" class="tabcontentservice">
-            <h2 class="text-main pb-3">Users</h2>
-            <h3 class="text-main">Report a bug</h3>
-            <p class="text-main size-18 mb-0">Use the <a class="underline" href="https://github.com/k9mail/k-9/issues" target="_blank" rel="noopener">K-9 issue tracker</a> to report bugs or request new features.</p>
-            <p class="text-main size-18 pb-2">Use the <a class="underline" href="https://github.com/k9mail/k9mail.github.io/issues" target="_blank" rel="noopener">website issue tracker</a> to report bugs or request new features.</p>
+        <div id="users" class="tabcontentservice">
+          <h2 class="text-main pb-3">Users</h2>
+          <h3 class="text-main">Report a bug</h3>
+          <p class="text-main size-18 mb-0">Use the <a class="underline" href="https://github.com/k9mail/k-9/issues"
+              target="_blank" rel="noopener">K-9 issue tracker</a> to report bugs or request new features.</p>
+          <p class="text-main size-18 pb-2">Use the <a class="underline"
+              href="https://github.com/k9mail/k9mail.github.io/issues" target="_blank" rel="noopener">website issue
+              tracker</a> to report bugs or request new features.</p>
 
-            <h3 class="text-main">Translate the app</h3>
-            <p class="text-main size-18 pb-2">K9 Mail uses <a class="underline" href="https://www.transifex.com/k-9/k9mail/" target="_blank" rel="noopener">Transifex</a> for translations. As features are added, there is often a need for translators to localise the text accordingly.</p>
+          <h3 class="text-main">Translate the app</h3>
+          <p class="text-main size-18 pb-2">K9 Mail uses <a class="underline"
+              href="https://www.transifex.com/k-9/k9mail/" target="_blank" rel="noopener">Transifex</a> for
+            translations. As features are added, there is often a need for translators to localise the text accordingly.
+          </p>
 
-            <h3 class="text-main">Help other users</h3>
-            <p class="text-main size-18 pb-2">Help other users by answering questions over at the <a class="underline" href="https://forum.k9mail.app/" target="_blank" rel="noopener">support forum</a>.</p>
-          </div>
-
-          <div id="developers" class="tabcontentservice">
-            <h2 class="text-main pb-3">Developers</h2>
-            <h3 class="text-main">Get the source</h3>
-            <p class="text-main size-18 pb-2">The <a class="underline" href="https://github.com/k9mail/k-9" target="_blank" rel="noopener">source code</a> is hosted on GitHub.</p>
-
-            <h3 class="text-main">Read the development documentation</h3>
-            <p class="text-main size-18 pb-2">We maintain documentation on the design of the app in the <a class="underline" href="/documentation/development">development section</a> of the documentation and on the <a class="underline" href="https://github.com/k9mail/k-9/wiki" target="_blank" rel="noopener">Wiki</a>. Feel free to contribute towards this and read it to guide patches to submit. If you are new to Android then the <a class="underline" href="https://developer.android.com/training/index.html" target="_blank" rel="noopener">Android Developer site</a> has lots of helpful resources.</p>
-
-            <h3 class="text-main">Finding issues to fix</h3>
-            <p class="text-main size-18 pb-2">A number of the issues are marked with the ‘<a class="underline" href="https://github.com/k9mail/k-9/labels/good%20first%20issue" target="_blank" rel="noopener">good first issue</a>’ label indicating they are suitable for someone new to K-9 Mail's code base.</p>
-
-            <h3 class="text-main">Developing and submitting a patch</h3>
-            <ul class="pb-2">
-                <li class="text-main size-18">The <a class="underline" href="https://github.com/k9mail/k-9/wiki/BuildingK9" target="_blank" rel="noopener">BuildingK9</a> page has information on how to build K-9. It’s important you run the tests (especially ones related to code you have directly changed) before submitting your code label indicating they are probably suitable for someone with not much experience of K-9.</li>
-                <li class="text-main size-18">See the <a class="underline" href="https://github.com/k9mail/k-9/wiki/CodeStyle" target="_blank" rel="noopener">Code Style</a> for information on formatting your code so it matches our style.</li>
-                <li class="text-main size-18">See the <a class="underline" href="https://github.com/k9mail/k-9/wiki/" target="_blank" rel="noopener">Git Guide</a> for information on using Git and submitting pull requests</li>
-            </ul>
-          </div>
-
-          <div id="documentation" class="tabcontentservice">
-            <h2 class="text-main">Documentation</h2>
-            <p class="text-main size-18 pb-2">Like everything else, this manual is the work of volunteers. If you feel it could be improved with information on a certain topic, feel free to contribute by <a class="underline" href="https://github.com/k9mail/k9mail.github.io/issues" target="_blank" rel="noopener">creating an issue on the website’s tracker</a> or submitting a pull request.</p>
-          </div>
-
-          <div id="donation" class="tabcontentservice">
-            <h2 class="text-main">Donation</h2>
-            <p class="text-main size-18 pb-2">If you want to contribute financially, head over to <a class="underline" href="https://liberapay.com/k9mail" target="_blank" rel="noopener">K-9 Mail's page on Liberapay</a>.</p>
-          </div>
-
+          <h3 class="text-main">Help other users</h3>
+          <p class="text-main size-18 pb-2">Help other users by answering questions over at the <a class="underline"
+              href="https://forum.k9mail.app/" target="_blank" rel="noopener">support forum</a>.</p>
         </div>
+
+        <div id="developers" class="tabcontentservice">
+          <h2 class="text-main pb-3">Developers</h2>
+          <h3 class="text-main">Get the source</h3>
+          <p class="text-main size-18 pb-2">The <a class="underline" href="https://github.com/k9mail/k-9"
+              target="_blank" rel="noopener">source code</a> is hosted on GitHub.</p>
+
+          <h3 class="text-main">Read the development documentation</h3>
+          <p class="text-main size-18 pb-2">We maintain documentation on the design of the app in the <a
+              class="underline" href="/documentation/development">development section</a> of the documentation and on
+            the <a class="underline" href="https://github.com/k9mail/k-9/wiki" target="_blank" rel="noopener">Wiki</a>.
+            Feel free to contribute towards this and read it to guide patches to submit. If you are new to Android then
+            the <a class="underline" href="https://developer.android.com/training/index.html" target="_blank"
+              rel="noopener">Android Developer site</a> has lots of helpful resources.</p>
+
+          <h3 class="text-main">Finding issues to fix</h3>
+          <p class="text-main size-18 pb-2">A number of the issues are marked with the ‘<a class="underline"
+              href="https://github.com/k9mail/k-9/labels/good%20first%20issue" target="_blank" rel="noopener">good first
+              issue</a>’ label indicating they are suitable for someone new to K-9 Mail's code base.</p>
+
+          <h3 class="text-main">Developing and submitting a patch</h3>
+          <ul class="pb-2">
+            <li class="text-main size-18">The <a class="underline" href="https://github.com/k9mail/k-9/wiki/BuildingK9"
+                target="_blank" rel="noopener">BuildingK9</a> page has information on how to build K-9. It’s important
+              you run the tests (especially ones related to code you have directly changed) before submitting your code
+              label indicating they are probably suitable for someone with not much experience of K-9.</li>
+            <li class="text-main size-18">See the <a class="underline"
+                href="https://github.com/k9mail/k-9/wiki/CodeStyle" target="_blank" rel="noopener">Code Style</a> for
+              information on formatting your code so it matches our style.</li>
+            <li class="text-main size-18">See the <a class="underline" href="https://github.com/k9mail/k-9/wiki/"
+                target="_blank" rel="noopener">Git Guide</a> for information on using Git and submitting pull requests
+            </li>
+          </ul>
+        </div>
+
+        <div id="documentation" class="tabcontentservice">
+          <h2 class="text-main">Documentation</h2>
+          <p class="text-main size-18 pb-2">Like everything else, this manual is the work of volunteers. If you feel it
+            could be improved with information on a certain topic, feel free to contribute by <a class="underline"
+              href="https://github.com/k9mail/k9mail.github.io/issues" target="_blank" rel="noopener">creating an issue
+              on the website’s tracker</a> or submitting a pull request.</p>
+        </div>
+
+        <div id="donation" class="tabcontentservice">
+          <h2 class="text-main">Donation</h2>
+          <p class="text-main size-18 pb-2">If you want to contribute financially, head over to <a class="underline"
+              href="https://liberapay.com/k9mail" target="_blank" rel="noopener">K-9 Mail's page on Liberapay</a>.</p>
+        </div>
+
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Tabs Code -->
-  <script>
-    document.getElementById("button-users").click();
+<!-- Tabs Code -->
+<script>
+  document.getElementById("button-users").click();
 
-    function service(evt, type) {
-      // Declare all variables
-      var i, tabcontentservice, tablinkservice;
-      // Get all elements with class="tabcontentservice" and hide them
-      tabcontentservice = document.getElementsByClassName("tabcontentservice");
-      for (i = 0; i < tabcontentservice.length; i++) {
-        tabcontentservice[i].style.display = "none";
-      }
-      // Get all elements with class="tablinkservice" and remove the class "active"
-      tablinkservice = document.getElementsByClassName("tablinkservice");
-      for (i = 0; i < tablinkservice.length; i++) {
-        tablinkservice[i].className = tablinkservice[i].className.replace(" active", "");
-      }
-      // Show the current tab, and add an "active" class to the button that opened the tab
-      document.getElementById(type).style.display = "block";
-      evt.currentTarget.className += " active";
+  function service(evt, type) {
+    // Declare all variables
+    var i, tabcontentservice, tablinkservice;
+    // Get all elements with class="tabcontentservice" and hide them
+    tabcontentservice = document.getElementsByClassName("tabcontentservice");
+    for (i = 0; i < tabcontentservice.length; i++) {
+      tabcontentservice[i].style.display = "none";
     }
-  </script>
+    // Get all elements with class="tablinkservice" and remove the class "active"
+    tablinkservice = document.getElementsByClassName("tablinkservice");
+    for (i = 0; i < tablinkservice.length; i++) {
+      tablinkservice[i].className = tablinkservice[i].className.replace(" active", "");
+    }
+    // Show the current tab, and add an "active" class to the button that opened the tab
+    document.getElementById(type).style.display = "block";
+    evt.currentTarget.className += " active";
+  }
+</script>
 
-  <script>
-  window.onhashchange = function() {
-  var hash = location.hash.substr(1);
-  if(hash != '') {
+<script>
+  window.onhashchange = function () {
+    var hash = location.hash.substr(1);
+    if (hash != '') {
       var i, tabcontentservice, tablinkservice;
       // Get all elements with class="tabcontentservice" and hide them
       tabcontentservice = document.getElementsByClassName("tabcontentservice");
@@ -123,4 +155,4 @@ title: Contribute
       hash = '';
     }
   };
-  </script>
+</script>
