--- a/download.html
+++ b/download.html
@@ -6,47 +6,51 @@ title: Download
 <!-- Top Header Section -->
 
 <div class="container-fluid background">
-    <div class="container py-3">
-      <h1 class="text-main">Download</h1>
-    </div>
+  <div class="container py-3">
+    <h1 class="text-main">Download</h1>
+  </div>
 </div>
-  
+
 <!-- Boxes Section -->
-  
+
 <div class="container-fluid">
-    <div id="channels" class="container pt-4 pb-3">
-      <p class="mb-0 size-18">K-9 Mail is available for download on the following channels:</p>
-      <div class="row justify-content-between pt-4">
-        <div class="col mx-3 gallery-item project-card full-width-sm">
-          <a class="text-dark" target="_blank" rel="noopener" href="https://play.google.com/store/apps/details?id=com.fsck.k9">
-            <i class="fab fa-google-play size-36 text-main mb-3"></i>
-            <h3 class="text-main weight-700">Play Store</h3>
-            <p>Our main channel of distribution, beta channel also available.</p>
-          </a>
-        </div>
-        <div class="col mx-3 gallery-item project-card full-width-sm">
-          <a class="text-dark" target="_blank" rel="noopener" href="https://f-droid.org/packages/com.fsck.k9/">
-            <i class="fab fa-android size-36 text-main mb-3"></i>
-            <h3 class="text-main weight-700">F-Droid</h3>
-            <p>Get it via the free F-Droid app store, built from source by F-Droid.</p>
-          </a>
-        </div>
+  <div id="channels" class="container pt-4 pb-3">
+    <p class="mb-0 size-18">K-9 Mail is available for download on the following channels:</p>
+    <div class="row justify-content-between pt-4">
+      <div class="col mx-3 gallery-item project-card full-width-sm">
+        <a class="text-dark stretched-link" target="_blank" rel="noopener"
+          href="https://play.google.com/store/apps/details?id=com.fsck.k9">
+          <i class="fab fa-google-play size-36 text-main mb-3"></i>
+          <h3 class="text-main weight-700">Play Store</h3>
+          <p>Our main channel of distribution, beta channel also available.</p>
+        </a>
       </div>
-      <div class="row justify-content-between pb-3">
-        <div class="col mx-3 gallery-item project-card full-width-sm">
-            <a class="text-dark" target="_blank" rel="noopener" href="https://github.com/k9mail/k-9/releases">
-              <i class="fab fa-github size-36 text-main mb-3"></i>
-              <h3 class="text-main weight-700">GitHub Releases</h3>
-              <p>Direct APK downloads from GitHub, including pre-releases.</p>
-            </a>
-          </div>
-        <div class="col mx-3 gallery-item project-card full-width-sm">
-          <a class="text-dark" target="_blank" rel="noopener" href="https://www.amazon.com/K-9-Dog-Walkers-Mail/dp/B004JK61K0/">
-            <i class="fab fa-amazon size-36 text-main mb-3"></i>
-            <h3 class="text-main weight-700">Amazon App Store</h3>
-            <p>For devices that use the Amazon Store.</p>
-          </a>
-        </div>
+      <div class="col mx-3 gallery-item project-card full-width-sm">
+        <a class="text-dark stretched-link" target="_blank" rel="noopener"
+          href="https://f-droid.org/packages/com.fsck.k9/">
+          <i class="fab fa-android size-36 text-main mb-3"></i>
+          <h3 class="text-main weight-700">F-Droid</h3>
+          <p>Get it via the free F-Droid app store, built from source by F-Droid.</p>
+        </a>
+      </div>
+    </div>
+    <div class="row justify-content-between pb-3">
+      <div class="col mx-3 gallery-item project-card full-width-sm">
+        <a class="text-dark stretched-link" target="_blank" rel="noopener"
+          href="https://github.com/k9mail/k-9/releases">
+          <i class="fab fa-github size-36 text-main mb-3"></i>
+          <h3 class="text-main weight-700">GitHub Releases</h3>
+          <p>Direct APK downloads from GitHub, including pre-releases.</p>
+        </a>
+      </div>
+      <div class="col mx-3 gallery-item project-card full-width-sm">
+        <a class="text-dark stretched-link" target="_blank" rel="noopener"
+          href="https://www.amazon.com/K-9-Dog-Walkers-Mail/dp/B004JK61K0/">
+          <i class="fab fa-amazon size-36 text-main mb-3"></i>
+          <h3 class="text-main weight-700">Amazon App Store</h3>
+          <p>For devices that use the Amazon Store.</p>
+        </a>
       </div>
     </div>
   </div>
+</div>
