Remove outdated developer documentation

--- a/contribute.html
+++ b/contribute.html
@@ -64,14 +64,6 @@ title: Contribute
           <p class="text-main size-18 pb-2">The <a class="underline" href="https://github.com/k9mail/k-9"
               target="_blank" rel="noopener">source code</a> is hosted on GitHub.</p>
 
-          <h3 class="text-main">Read the development documentation</h3>
-          <p class="text-main size-18 pb-2">We maintain documentation on the design of the app in the <a
-              class="underline" href="/documentation/development">development section</a> of the documentation and on
-            the <a class="underline" href="https://github.com/k9mail/k-9/wiki" target="_blank" rel="noopener">Wiki</a>.
-            Feel free to contribute towards this and read it to guide patches to submit. If you are new to Android then
-            the <a class="underline" href="https://developer.android.com/training/index.html" target="_blank"
-              rel="noopener">Android Developer site</a> has lots of helpful resources.</p>
-
           <h3 class="text-main">Finding issues to fix</h3>
           <p class="text-main size-18 pb-2">A number of the issues are marked with the ‘<a class="underline"
               href="https://github.com/k9mail/k-9/labels/good%20first%20issue" target="_blank" rel="noopener">good first
@@ -86,7 +78,7 @@ title: Contribute
             <li class="text-main size-18">See the <a class="underline"
                 href="https://github.com/k9mail/k-9/wiki/CodeStyle" target="_blank" rel="noopener">Code Style</a> for
               information on formatting your code so it matches our style.</li>
-            <li class="text-main size-18">See the <a class="underline" href="https://github.com/k9mail/k-9/wiki/"
+            <li class="text-main size-18">See the <a class="underline" href="https://github.com/k9mail/k-9/wiki/GitGuide"
                 target="_blank" rel="noopener">Git Guide</a> for information on using Git and submitting pull requests
             </li>
           </ul>
