Remove documentation and point to docs.k9mail.app

--- a/contribute.html
+++ b/contribute.html
@@ -86,10 +86,11 @@ title: Contribute
 
         <div id="documentation" class="tabcontentservice">
           <h2 class="text-main">Documentation</h2>
-          <p class="text-main size-18 pb-2">Like everything else, this manual is the work of volunteers. If you feel it
-            could be improved with information on a certain topic, feel free to contribute by <a class="underline"
-              href="https://github.com/k9mail/k9mail.github.io/issues" target="_blank" rel="noopener">creating an issue
-              on the website’s tracker</a> or submitting a pull request.</p>
+          <p class="text-main size-18 pb-2">Like everything else, the manual is the work of volunteers. If you feel it
+            could be improved, feel free to contribute by <a class="underline"
+              href="https://github.com/k9mail/k9mail-docs/issues" target="_blank" rel="noopener">creating an issue</a> 
+              or submitting a pull request in the 
+              <a class="underline" href="https://github.com/k9mail/k9mail-docs">k9mail-docs</a> repository.</p>
         </div>
 
         <div id="donation" class="tabcontentservice">
