--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,7 @@ title: Privacy Policy
     <p class="text-main">The storage area is used to save attachments or export app settings. It can also be used to
       import app settings or select files to attach to a message the user is composing.</p>
     <p class="text-main mt-4">For more information on the permissions K-9 Mail requires see: <a
-        class="text-main underline" href="/documentation/permissions">Permissions</a>.</p>
+        class="text-main underline" href="https://docs.k9mail.app/en/current/setup/permissions/">Permissions</a>.</p>
     <p class="text-main mb-4">Sensitive user information is only used to perform the basic functionality of the app,
       sending and receiving email. K-9 Mail does not automatically collect and send data to the developers of the app or
       any third party. Sensitive information is also not included in application logs unless this is enabled by the
