Update link for donations

--- a/contribute.html
+++ b/contribute.html
@@ -96,7 +96,7 @@ title: Contribute
         <div id="donation" class="tabcontentservice">
           <h2 class="text-main">Donation</h2>
           <p class="text-main size-18 pb-2">If you want to contribute financially, head over to <a class="underline"
-              href="https://liberapay.com/k9mail" target="_blank" rel="noopener">K-9 Mail's page on Liberapay</a>.</p>
+              href="https://mzla.link/k9-give" target="_blank" rel="noopener">https://mzla.link/k9-give</a>.</p>
         </div>
 
       </div>
