Update contribute.html about translation

--- a/contribute.html
+++ b/contribute.html
@@ -49,7 +49,7 @@ title: Contribute
 
           <h3 class="text-main">Translate the app</h3>
           <p class="text-main size-18 pb-2">K9 Mail uses <a class="underline"
-              href="https://www.transifex.com/k-9/k9mail/" target="_blank" rel="noopener">Transifex</a> for
+              href="https://hosted.weblate.org/projects/tb-android/" target="_blank" rel="noopener">Weblate</a> for
             translations. As features are added, there is often a need for translators to localise the text accordingly.
           </p>
 
