fix(contribute): correct link to repository for website issues

--- a/contribute.html
+++ b/contribute.html
@@ -44,7 +44,7 @@ title: Contribute
           <p class="text-main size-18 mb-0">Use the <a class="underline" href="https://github.com/k9mail/k-9/issues"
               target="_blank" rel="noopener">K-9 issue tracker</a> to report bugs or request new features.</p>
           <p class="text-main size-18 pb-2">Use the <a class="underline"
-              href="https://github.com/k9mail/k9mail.github.io/issues" target="_blank" rel="noopener">website issue
+              href="https://github.com/k9mail/k9mail.app/issues" target="_blank" rel="noopener">website issue
               tracker</a> to report bugs or request new features.</p>
 
           <h3 class="text-main">Translate the app</h3>
