refactor(contribute): update link to moved app repository
Part of the change to `thunderbird-android`

--- a/contribute.html
+++ b/contribute.html
@@ -41,7 +41,7 @@ title: Contribute
         <div id="users" class="tabcontentservice">
           <h2 class="text-main pb-3">Users</h2>
           <h3 class="text-main">Report a bug</h3>
-          <p class="text-main size-18 mb-0">Use the <a class="underline" href="https://github.com/k9mail/k-9/issues"
+          <p class="text-main size-18 mb-0">Use the <a class="underline" href="https://github.com/thunderbird/thunderbird-android/issues"
               target="_blank" rel="noopener">K-9 issue tracker</a> to report bugs or request new features.</p>
           <p class="text-main size-18 pb-2">Use the <a class="underline"
               href="https://github.com/k9mail/k9mail.github.io/issues" target="_blank" rel="noopener">website issue
@@ -61,24 +61,24 @@ title: Contribute
         <div id="developers" class="tabcontentservice">
           <h2 class="text-main pb-3">Developers</h2>
           <h3 class="text-main">Get the source</h3>
-          <p class="text-main size-18 pb-2">The <a class="underline" href="https://github.com/k9mail/k-9"
+          <p class="text-main size-18 pb-2">The <a class="underline" href="https://github.com/thunderbird/thunderbird-android"
               target="_blank" rel="noopener">source code</a> is hosted on GitHub.</p>
 
           <h3 class="text-main">Finding issues to fix</h3>
           <p class="text-main size-18 pb-2">A number of the issues are marked with the ‘<a class="underline"
-              href="https://github.com/k9mail/k-9/labels/good%20first%20issue" target="_blank" rel="noopener">good first
+              href="https://github.com/thunderbird/thunderbird-android/labels/good%20first%20issue" target="_blank" rel="noopener">good first
               issue</a>’ label indicating they are suitable for someone new to K-9 Mail's code base.</p>
 
           <h3 class="text-main">Developing and submitting a patch</h3>
           <ul class="pb-2">
-            <li class="text-main size-18">The <a class="underline" href="https://github.com/k9mail/k-9/wiki/BuildingK9"
+            <li class="text-main size-18">The <a class="underline" href="https://github.com/thunderbird/thunderbird-android/wiki/BuildingK9"
                 target="_blank" rel="noopener">BuildingK9</a> page has information on how to build K-9. It’s important
               you run the tests (especially ones related to code you have directly changed) before submitting your code
               label indicating they are probably suitable for someone with not much experience of K-9.</li>
             <li class="text-main size-18">See the <a class="underline"
-                href="https://github.com/k9mail/k-9/wiki/CodeStyle" target="_blank" rel="noopener">Code Style</a> for
+                href="https://github.com/thunderbird/thunderbird-android/wiki/CodeStyle" target="_blank" rel="noopener">Code Style</a> for
               information on formatting your code so it matches our style.</li>
-            <li class="text-main size-18">See the <a class="underline" href="https://github.com/k9mail/k-9/wiki/GitGuide"
+            <li class="text-main size-18">See the <a class="underline" href="https://github.com/thunderbird/thunderbird-android/wiki/GitGuide"
                 target="_blank" rel="noopener">Git Guide</a> for information on using Git and submitting pull requests
             </li>
           </ul>
