Update repository URLs

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ title: About
     <h2 class="text-main pt-3">License</h2>
     <p class="text-main">K-9 Mail is licensed under the <a class="underline"
         href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank" rel="noopener">Apache License, Version
-        2.0</a>. The source code is available on <a class="underline" href="https://github.com/k9mail/k-9/"
+        2.0</a>. The source code is available on <a class="underline" href="https://github.com/thunderbird/thunderbird-android/"
         target="_blank" rel="noopener">GitHub</a>.</p>
   </div>
 </div>
