--- a/community.html
+++ b/community.html
@@ -35,7 +35,7 @@ title: Community
     </div>
     <div class="row justify-content-between pt-1 pb-3">
       <div class="col mx-3 gallery-item project-card full-width-sm">
-        <a class="text-dark stretched-link" target="_blank" rel="noopener" href="https://github.com/k9mail/k-9/issues">
+        <a class="text-dark stretched-link" target="_blank" rel="noopener" href="https://github.com/thunderbird/thunderbird-android/issues">
           <i class="fab fa-github size-36 text-main mb-3"></i>
           <h3 class="text-main weight-700">GitHub Bug Tracker</h3>
           <p>Use the issue tracker to report bugs or request new features.</p>
