--- a/download.html
+++ b/download.html
@@ -37,7 +37,7 @@ title: Download
     <div class="row justify-content-between pb-3">
       <div class="col mx-3 gallery-item project-card full-width-sm">
         <a class="text-dark stretched-link" target="_blank" rel="noopener"
-          href="https://github.com/k9mail/k-9/releases">
+          href="https://github.com/thunderbird/thunderbird-android/releases">
           <i class="fab fa-github size-36 text-main mb-3"></i>
           <h3 class="text-main weight-700">GitHub Releases</h3>
           <p>Direct APK downloads from GitHub, including pre-releases.</p>
